# larexamples

./: CMakeLists.txt  altCMakeLists.cmake
AnalysisExample/: ADDITIONAL_NOTES.txt  AnalysisExample.fcl  AnalysisExample_module.cc  CMakeLists.txt  README.txt  altCMakeLists.cmake
Modules/: larexamplesConfig.cmake.in
cmakeConfig/: CMakeLists.txt  larexamples-fragment.cmake.in
doc/: examples.dox
larexamples/: CMakeLists.txt  larexamples.dox
larexamples/Algorithms/: Algorithms.dox  CMakeLists.txt
larexamples/Algorithms/RemoveIsolatedSpacePoints/: CMakeLists.txt  PointIsolationAlg.h  README  README.md  RemoveIsolatedSpacePoints.dox  RemoveIsolatedSpacePoints_module.cc  SpacePartition.h  SpacePointIsolationAlg.cxx  SpacePointIsolationAlg.h  removeisolatedspacepoints_standard.fcl
larexamples/Algorithms/TotallyCheatTracks/: CMakeLists.txt  README.md  TotallyCheatTracker_module.cc  TotallyCheatTrackingAlg.cxx  TotallyCheatTrackingAlg.h  TotallyCheatTracks.dox  cheat_tracks.fcl  totallycheattracking.fcl
larexamples/Algorithms/TotallyCheatTracks/CheatTrackData/: CMakeLists.txt  CheatTrack.h  classes.h  classes_def.xml
larexamples/AnalysisExample/: ADDITIONAL_NOTES.md  ADDITIONAL_NOTES.txt  AnalysisExample.dox  AnalysisExample.fcl  AnalysisExample_module.cc  CMakeLists.txt  README.md  patch.txt  rename.sh
larexamples/DebuggingExamples/: CMakeLists.txt  DebuggingExamples.dox
larexamples/DebuggingExamples/CatchException/: CMakeLists.txt  CatchException.dox  Disturbance_module.cc  Exploder_module.cc  README.md  exploder_badalloc.fcl  exploder_disturbed_artexception.fcl  exploder_disturbed_outofrange.fcl  exploder_outofrange.fcl
larexamples/RecoProxyUsageExample/: CMakeLists.txt  RecoProxyUsageExample.fcl  RecoProxyUsageExample_module.cc
larexamples/Services/: CMakeLists.txt  Services.dox  namespaces.h
larexamples/Services/AtomicNumber/: CMakeLists.txt  README  README.html  README.md
larexamples/Services/AtomicNumber/Providers/: AtomicNumber.cxx  AtomicNumber.h  CMakeLists.txt
larexamples/Services/AtomicNumber/Services/: .AtomicNumberService_service.cc.kate-swp  AtomicNumberService.h  AtomicNumberService_service.cc  CMakeLists.txt
larexamples/Services/AtomicNumberService/: .CMakeLists.txt.swp
larexamples/Services/ShowerCalibrationGalore/: CMakeLists.txt  README  README.md  ShowerCalibrationGalore.dox
larexamples/Services/ShowerCalibrationGalore/Providers/: CMakeLists.txt  ShowerCalibrationGalore.h  ShowerCalibrationGaloreFromPID.cxx  ShowerCalibrationGaloreFromPID.h  ShowerCalibrationGaloreFromPIDTestHelpers.h  ShowerCalibrationGaloreScale.cxx  ShowerCalibrationGaloreScale.h  ShowerCalibrationGaloreScaleTestHelpers.h  showercalibrationgalore_standard.fcl
larexamples/Services/ShowerCalibrationGalore/Services/: CMakeLists.txt  ShowerCalibrationGaloreFromPIDService.h  ShowerCalibrationGaloreFromPIDService_service.cc  (+3 more)
test/: CMakeLists.txt
test/Algorithms/RemoveIsolatedSpacePoints/: CMakeLists.txt  CheckDataProductSize_module.cc  PointIsolationAlgRandom_test.cc  PointIsolationAlgStress_test.cc  PointIsolationAlg_test.cc  SpacePointMaker_module.cc  SpacePointTestUtils.cxx  SpacePointTestUtils.h  point_isolation_test.fcl
test/Algorithms/TotallyCheatTracks/: CMakeLists.txt  DumpCheatTracks_module.cc  ParticleMaker_module.cc  test_totallycheattracker.fcl
test/Services/: CMakeLists.txt
test/Services/ShowerCalibrationGalore/: CMakeLists.txt
ups/: product_deps
(+19 files in other folders)
